@@ -47,7 +47,6 @@
 #include <netinet/in.h>
 #include <netinet/ip.h>
 #include <netinet/ip_icmp.h>
-#include <net/route.h>
 
 #include <netdb.h>
 #ifndef EAI_NONE
