@@ -1,3 +1,13 @@
+2003-04-11  Michael Checky  <Michael_Checky@Thermoking.com>
+
+	* tests/nc_test_framework.h: deleted '#include <net/route.h>'.
+	* tests/linux_echo.c: added '#include <netinet/in_systm.h>',
+	deleted '#include <net/route.h>'.
+	* tests/tcp_sink.c: ditto.
+	* tests/tcp_souce.c: ditto.
+	* tests/nc_test_slave.c: changed 'bool' to 'int' because the compiler
+	didn't like 'bool'.
+
 2003-04-02  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* src/dhcp_prot.c (do_dhcp_down_net): SIOCGLIFADDR and SIOCDLIFADDR
